# ory-sample

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  tasks.py
docker/: Dockerfile
kratos/: identity.schema.json  kratos.yml
ory_test/: api.py  main.py
tests/: test_api.py
